--- a/index.html
+++ b/index.html
@@ -6,62 +6,135 @@
   <title>Countries and Their Capitals</title>
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome for Icons -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <!-- Custom CSS -->
   <style>
     body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
       background-color: #f8f9fa;
+      display: flex;
+      min-height: 100vh;
     }
 
-    h1 {
-      color: #333;
+    /* Sidebar */
+    .sidebar {
+      width: 300px;
+      background-color: #2c3e50;
+      color: #fff;
+      padding: 20px;
+      box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .sidebar h2 {
+      margin-top: 0;
+      font-size: 24px;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    .sidebar .search-container {
       margin-top: 20px;
     }
 
-    .table {
-      background-color: #fff;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      margin-top: 20px;
-    }
-
-    .search-container {
-      margin-bottom: 20px;
-    }
-
-    .search-input {
+    .sidebar .search-input {
       width: 100%;
       padding: 10px;
-      border: 1px solid #ddd;
+      border: none;
       border-radius: 5px;
+      font-size: 16px;
+      outline: none;
+    }
+
+    /* Main Content */
+    .main-content {
+      flex: 1;
+      padding: 20px;
+      background-color: #fff;
+    }
+
+    .country-list {
+      list-style: none;
+      padding: 0;
+    }
+
+    .country-item {
+      display: flex;
+      align-items: center;
+      padding: 15px;
+      margin: 10px 0;
+      background-color: #f8f9fa;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .country-item:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .country-item .flag {
+      width: 40px;
+      height: 40px;
+      margin-right: 15px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    .country-item .details {
+      flex: 1;
+    }
+
+    .country-item .name {
+      font-size: 18px;
+      font-weight: bold;
+      color: #2c3e50;
+    }
+
+    .country-item .info {
+      font-size: 14px;
+      color: #555;
+    }
+
+    .country-item .info span {
+      margin-right: 10px;
+    }
+
+    .country-item .info .capital {
+      color: #007bff;
+    }
+
+    .country-item .info .country-code {
+      color: #28a745;
+    }
+
+    .country-item .info .phone-code {
+      color: #dc3545;
     }
   </style>
 </head>
 <body>
-  <div class="container mt-5">
-    <h1 class="text-center mb-4">Countries and Their Capitals</h1>
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <h2>Countries Explorer</h2>
     <!-- Search Input -->
     <div class="search-container">
       <input
         type="text"
         id="search-input"
         class="search-input"
-        placeholder="Search for a country, capital, country code, or phone code..."
+        placeholder="Search for a country, capital, code, or phone..."
       />
     </div>
-    <!-- Table -->
-    <table class="table table-bordered table-striped">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Country Code</th>
-          <th>Country</th>
-          <th>Capital</th>
-          <th>Phone Code</th>
-        </tr>
-      </thead>
-      <tbody id="countries-table">
-        <!-- Countries and capitals will be dynamically inserted here -->
-      </tbody>
-    </table>
+  </div>
+
+  <!-- Main Content -->
+  <div class="main-content">
+    <ul class="country-list" id="countries-list">
+      <!-- Country items will be dynamically inserted here -->
+    </ul>
   </div>
 
   <!-- Bootstrap 5 JS and dependencies -->
@@ -69,7 +142,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
   <!-- Custom JS -->
   <script>
-    const countriesTable = document.getElementById("countries-table");
+    const countriesList = document.getElementById("countries-list");
     const searchInput = document.getElementById("search-input");
 
     let countriesData = []; // To store the fetched data
@@ -84,24 +157,29 @@
         // Store the sorted data
         countriesData = data;
 
-        // Populate the table with sorted data
-        populateTable(countriesData);
+        // Populate the list with sorted data
+        populateList(countriesData);
       })
       .catch((error) => console.error("Error fetching data:", error));
 
-    // Function to populate the table
-    function populateTable(data) {
-      countriesTable.innerHTML = ""; // Clear the table
-      data.forEach((country, index) => {
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${index + 1}</td>
-          <td>${country.cca2}</td>
-          <td>${country.name.common}</td>
-          <td>${country.capital ? country.capital[0] : "N/A"}</td>
-          <td>${getPhoneCode(country.idd)}</td>
+    // Function to populate the list with country items
+    function populateList(data) {
+      countriesList.innerHTML = ""; // Clear the list
+      data.forEach((country) => {
+        const listItem = document.createElement("li");
+        listItem.className = "country-item";
+        listItem.innerHTML = `
+          <img src="${country.flags.png}" alt="${country.name.common}" class="flag">
+          <div class="details">
+            <div class="name">${country.name.common}</div>
+            <div class="info">
+              <span class="capital">Capital: ${country.capital ? country.capital[0] : "N/A"}</span>
+              <span class="country-code">Code: ${country.cca2}</span>
+              <span class="phone-code">Phone: ${getPhoneCode(country.idd)}</span>
+            </div>
+          </div>
         `;
-        countriesTable.appendChild(row);
+        countriesList.appendChild(listItem);
       });
     }
 
@@ -130,7 +208,7 @@
         );
       });
 
-      populateTable(filteredData); // Update the table with filtered data
+      populateList(filteredData); // Update the list with filtered data
     });
   </script>
 </body>
