--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     /* Sidebar */
     .sidebar {
-      width: 300px;
+      width: 250px; /* Reduced sidebar width */
       background-color: #2c3e50;
       color: #fff;
       padding: 20px;
@@ -28,6 +28,7 @@
       position: fixed; /* Make sidebar fixed */
       height: 100vh; /* Full height */
       overflow-y: auto; /* Enable scrolling if content overflows */
+      z-index: 1000; /* Ensure sidebar stays on top */
     }
 
     .sidebar h2 {
@@ -55,9 +56,10 @@
       flex: 1;
       padding: 20px;
       background-color: #fff;
-      margin-left: 300px; /* Offset for the fixed sidebar */
+      margin-left: 250px; /* Offset for the fixed sidebar */
     }
 
+    /* Country List */
     .country-list {
       list-style: none;
       padding: 0;
@@ -124,6 +126,30 @@
 
     .country-item .info .currency {
       color: #9c27b0;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      .sidebar {
+        width: 100%; /* Full width on mobile */
+        height: auto; /* Auto height */
+        position: relative; /* Remove fixed positioning */
+        margin-bottom: 20px; /* Add space below the sidebar */
+      }
+
+      .main-content {
+        margin-left: 0; /* Remove offset for the sidebar */
+      }
+
+      .country-item {
+        flex-direction: column; /* Stack items vertically on mobile */
+        text-align: center;
+      }
+
+      .country-item .flag {
+        margin-right: 0;
+        margin-bottom: 10px;
+      }
     }
   </style>
 </head>
