--- a/index.html
+++ b/index.html
@@ -14,21 +14,18 @@
       margin: 0;
       font-family: 'Arial', sans-serif;
       background-color: #f8f9fa;
-      display: flex;
-      min-height: 100vh;
     }
 
-    /* Sidebar */
+    /* Sidebar (now at the top) */
     .sidebar {
-      width: 250px; /* Reduced sidebar width */
+      width: 100%; /* Full width */
       background-color: #2c3e50;
       color: #fff;
       padding: 20px;
-      box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       position: fixed; /* Make sidebar fixed */
-      height: 100vh; /* Full height */
-      overflow-y: auto; /* Enable scrolling if content overflows */
-      z-index: 1000; /* Ensure sidebar stays on top */
+      top: 0; /* Position at the top */
+      z-index: 1000; /* Ensure it stays on top */
     }
 
     .sidebar h2 {
@@ -40,6 +37,9 @@
 
     .sidebar .search-container {
       margin-top: 20px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .sidebar .search-input {
@@ -53,10 +53,9 @@
 
     /* Main Content */
     .main-content {
-      flex: 1;
       padding: 20px;
       background-color: #fff;
-      margin-left: 250px; /* Offset for the fixed sidebar */
+      margin-top: 150px; /* Offset for the fixed sidebar */
     }
 
     /* Country List */
@@ -131,14 +130,15 @@
     /* Responsive Design */
     @media (max-width: 768px) {
       .sidebar {
-        width: 100%; /* Full width on mobile */
-        height: auto; /* Auto height */
-        position: relative; /* Remove fixed positioning */
-        margin-bottom: 20px; /* Add space below the sidebar */
+        padding: 15px; /* Reduce padding on mobile */
+      }
+
+      .sidebar h2 {
+        font-size: 20px; /* Smaller title on mobile */
       }
 
       .main-content {
-        margin-left: 0; /* Remove offset for the sidebar */
+        margin-top: 130px; /* Adjust offset for smaller sidebar */
       }
 
       .country-item {
@@ -154,7 +154,7 @@
   </style>
 </head>
 <body>
-  <!-- Sidebar -->
+  <!-- Sidebar (now at the top) -->
   <div class="sidebar">
     <h2>Countries Explorer</h2>
     <!-- Search Input -->
