--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Countries and Their Capitals</title>
+  <title>Countries by Continent</title>
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for Icons -->
@@ -49,6 +49,7 @@
       border-radius: 5px;
       font-size: 16px;
       outline: none;
+      margin-bottom: 10px;
     }
 
     /* Main Content */
@@ -58,10 +59,40 @@
       margin-top: 150px; /* Offset for the fixed sidebar */
     }
 
-    /* Country List */
+    /* Continent Section */
+    .continent-section {
+      margin-bottom: 20px;
+    }
+
+    .continent-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: #2c3e50;
+      color: #fff;
+      padding: 10px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .continent-header h3 {
+      margin: 0;
+      font-size: 20px;
+    }
+
+    .continent-header .toggle-icon {
+      font-size: 18px;
+      transition: transform 0.3s ease;
+    }
+
+    .continent-header.collapsed .toggle-icon {
+      transform: rotate(90deg);
+    }
+
     .country-list {
       list-style: none;
       padding: 0;
+      margin-top: 10px;
     }
 
     .country-item {
@@ -168,7 +199,7 @@
 <body>
   <!-- Sidebar (now at the top) -->
   <div class="sidebar">
-    <h2>Countries Explorer</h2>
+    <h2>Countries by Continent</h2>
     <!-- Search Input -->
     <div class="search-container">
       <input
@@ -182,9 +213,9 @@
 
   <!-- Main Content -->
   <div class="main-content">
-    <ul class="country-list" id="countries-list">
-      <!-- Country items will be dynamically inserted here -->
-    </ul>
+    <div id="continents-container">
+      <!-- Continent sections will be dynamically inserted here -->
+    </div>
   </div>
 
   <!-- Bootstrap 5 JS and dependencies -->
@@ -192,7 +223,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
   <!-- Custom JS -->
   <script>
-    const countriesList = document.getElementById("countries-list");
+    const continentsContainer = document.getElementById("continents-container");
     const searchInput = document.getElementById("search-input");
 
     let countriesData = []; // To store the fetched data
@@ -207,32 +238,70 @@
         // Store the sorted data
         countriesData = data;
 
-        // Populate the list with sorted data
-        populateList(countriesData);
+        // Group countries by continent
+        const groupedData = groupByContinent(countriesData);
+
+        // Populate the continents container
+        populateContinents(groupedData);
       })
       .catch((error) => console.error("Error fetching data:", error));
 
-    // Function to populate the list with country items
-    function populateList(data) {
-      countriesList.innerHTML = ""; // Clear the list
-      data.forEach((country, index) => {
-        const listItem = document.createElement("li");
-        listItem.className = "country-item";
-        listItem.innerHTML = `
-          <div class="sn">${index + 1}.</div>
-          <img src="${country.flags.png}" alt="${country.name.common}" class="flag">
-          <div class="details">
-            <div class="name">${country.name.common}</div>
-            <div class="info">
-              <span class="capital">Capital: ${country.capital ? country.capital[0] : "N/A"}</span>
-              <span class="country-code">Code: ${country.cca2}</span>
-              <span class="phone-code">Phone: ${getPhoneCode(country.idd)}</span>
-              <span class="population">Population: ${formatPopulation(country.population)}</span>
-              <span class="currency">Currency: ${getCurrency(country.currencies)}</span>
-            </div>
+    // Function to group countries by continent
+    function groupByContinent(data) {
+      const grouped = {};
+      data.forEach((country) => {
+        const continent = country.region || "Other";
+        if (!grouped[continent]) {
+          grouped[continent] = [];
+        }
+        grouped[continent].push(country);
+      });
+      return grouped;
+    }
+
+    // Function to populate the continents container
+    function populateContinents(groupedData) {
+      continentsContainer.innerHTML = ""; // Clear the container
+      Object.keys(groupedData).forEach((continent) => {
+        const continentSection = document.createElement("div");
+        continentSection.className = "continent-section";
+        continentSection.innerHTML = `
+          <div class="continent-header">
+            <h3>${continent}</h3>
+            <span class="toggle-icon"><i class="fas fa-chevron-down"></i></span>
           </div>
+          <ul class="country-list">
+            <!-- Country items will be dynamically inserted here -->
+          </ul>
         `;
-        countriesList.appendChild(listItem);
+        const countryList = continentSection.querySelector(".country-list");
+        groupedData[continent].forEach((country, index) => {
+          const listItem = document.createElement("li");
+          listItem.className = "country-item";
+          listItem.innerHTML = `
+            <div class="sn">${index + 1}.</div>
+            <img src="${country.flags.png}" alt="${country.name.common}" class="flag">
+            <div class="details">
+              <div class="name">${country.name.common}</div>
+              <div class="info">
+                <span class="capital">Capital: ${country.capital ? country.capital[0] : "N/A"}</span>
+                <span class="country-code">Code: ${country.cca2}</span>
+                <span class="phone-code">Phone: ${getPhoneCode(country.idd)}</span>
+                <span class="population">Population: ${formatPopulation(country.population)}</span>
+                <span class="currency">Currency: ${getCurrency(country.currencies)}</span>
+              </div>
+            </div>
+          `;
+          countryList.appendChild(listItem);
+        });
+        continentsContainer.appendChild(continentSection);
+
+        // Add click event to toggle continent section
+        const continentHeader = continentSection.querySelector(".continent-header");
+        continentHeader.addEventListener("click", () => {
+          continentHeader.classList.toggle("collapsed");
+          countryList.style.display = continentHeader.classList.contains("collapsed") ? "none" : "block";
+        });
       });
     }
 
@@ -283,7 +352,11 @@
         );
       });
 
-      populateList(filteredData); // Update the list with filtered data
+      // Group filtered data by continent
+      const groupedData = groupByContinent(filteredData);
+
+      // Repopulate the continents container
+      populateContinents(groupedData);
     });
   </script>
 </body>
